crates/elenchus-compiler/tests/snapshots/ir__complex_program_ir.snap
---
source: crates/elenchus-compiler/tests/ir.rs
expression: c
---
Compiled {
    atoms: [
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "broken",
            ),
            object: None,
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "busy",
            ),
            object: None,
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "can",
            ),
            object: Some(
                "deploy",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "checked",
            ),
            object: Some(
                "integration",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "checked",
            ),
            object: Some(
                "unit",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "mode",
            ),
            object: Some(
                "error",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "mode",
            ),
            object: Some(
                "halt",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "mode",
            ),
            object: Some(
                "idle",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "mode",
            ),
            object: Some(
                "run",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "notify",
            ),
            object: Some(
                "ops",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "owner",
            ),
            object: Some(
                "alice",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "owner",
            ),
            object: Some(
                "bob",
            ),
        },
        AtomKey {
            domain: "sys",
            subject: "Sys",
            predicate: Some(
                "ready",
            ),
            object: None,
        },
    ],
    facts: [
        Fact {
            atom: 12,
            value: True,
            origin: Origin {
                source: "complex.vrf",
                line: 2,
                premise: None,
                kind: "FACT",
            },
            soft: false,
        },
        Fact {
            atom: 0,
            value: False,
            origin: Origin {
                source: "complex.vrf",
                line: 3,
                premise: None,
                kind: "NOT",
            },
            soft: false,
        },
    ],
    clauses: [
        Clause {
            lits: [
                Lit {
                    atom: 7,
                    negated: false,
                },
                Lit {
                    atom: 8,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 5,
                premise: Some(
                    "modes",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 7,
                    negated: false,
                },
                Lit {
                    atom: 6,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 5,
                premise: Some(
                    "modes",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 7,
                    negated: false,
                },
                Lit {
                    atom: 5,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 5,
                premise: Some(
                    "modes",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 8,
                    negated: false,
                },
                Lit {
                    atom: 6,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 5,
                premise: Some(
                    "modes",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 8,
                    negated: false,
                },
                Lit {
                    atom: 5,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 5,
                premise: Some(
                    "modes",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 6,
                    negated: false,
                },
                Lit {
                    atom: 5,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 5,
                premise: Some(
                    "modes",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 10,
                    negated: false,
                },
                Lit {
                    atom: 11,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 12,
                premise: Some(
                    "exactly_one_owner",
                ),
                kind: "ONEOF",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 10,
                    negated: true,
                },
                Lit {
                    atom: 11,
                    negated: true,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 12,
                premise: Some(
                    "exactly_one_owner",
                ),
                kind: "ONEOF",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 4,
                    negated: true,
                },
                Lit {
                    atom: 3,
                    negated: true,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 17,
                premise: Some(
                    "at_least_one_check",
                ),
                kind: "ATLEAST",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 12,
                    negated: false,
                },
                Lit {
                    atom: 4,
                    negated: false,
                },
                Lit {
                    atom: 0,
                    negated: true,
                },
                Lit {
                    atom: 2,
                    negated: true,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 22,
                premise: Some(
                    "deploy_gate",
                ),
                kind: "PREMISE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 12,
                    negated: false,
                },
                Lit {
                    atom: 4,
                    negated: false,
                },
                Lit {
                    atom: 0,
                    negated: true,
                },
                Lit {
                    atom: 9,
                    negated: true,
                },
            ],
            origin: Origin {
                source: "complex.vrf",
                line: 22,
                premise: Some(
                    "deploy_gate",
                ),
                kind: "PREMISE",
            },
        },
    ],
    rules: [
        Rule {
            antecedent: [
                Lit {
                    atom: 8,
                    negated: false,
                },
            ],
            consequent: [
                Lit {
                    atom: 1,
                    negated: false,
                },
            ],
            exceptions: [],
            origin: Origin {
                source: "complex.vrf",
                line: 29,
                premise: Some(
                    "derive_busy",
                ),
                kind: "RULE",
            },
        },
    ],
    checks: [
        Check {
            subject: Some(
                "Sys",
            ),
            bidirectional: true,
        },
    ],
    pending_imports: [],
    unused_imports: [],
    consumed: [],
    placeholders: [],
    unwitnessed_exists: [],
    justifications: [],
    hypotheses: [],
    attributions: [],
}
