crates/elenchus-compiler/tests/snapshots/ir__imported_ir_keeps_provenance_and_unifies_atoms.snap
---
source: crates/elenchus-compiler/tests/ir.rs
expression: c
---
Compiled {
    atoms: [
        AtomKey {
            domain: "physics",
            subject: "Motor",
            predicate: Some(
                "over_100",
            ),
            object: None,
        },
        AtomKey {
            domain: "physics",
            subject: "Motor",
            predicate: Some(
                "over_200",
            ),
            object: None,
        },
        AtomKey {
            domain: "physics",
            subject: "Motor",
            predicate: Some(
                "uses",
            ),
            object: Some(
                "fast_path",
            ),
        },
        AtomKey {
            domain: "physics",
            subject: "Motor",
            predicate: Some(
                "uses",
            ),
            object: Some(
                "slow_path",
            ),
        },
    ],
    facts: [
        Fact {
            atom: 1,
            value: True,
            origin: Origin {
                source: "import-demo.vrf",
                line: 9,
                premise: None,
                kind: "FACT",
            },
            soft: false,
        },
        Fact {
            atom: 0,
            value: False,
            origin: Origin {
                source: "import-demo.vrf",
                line: 10,
                premise: None,
                kind: "NOT",
            },
            soft: false,
        },
    ],
    clauses: [
        Clause {
            lits: [
                Lit {
                    atom: 2,
                    negated: false,
                },
                Lit {
                    atom: 3,
                    negated: false,
                },
            ],
            origin: Origin {
                source: "physics.vrf",
                line: 6,
                premise: Some(
                    "one_path",
                ),
                kind: "EXCLUSIVE",
            },
        },
        Clause {
            lits: [
                Lit {
                    atom: 1,
                    negated: false,
                },
                Lit {
                    atom: 0,
                    negated: true,
                },
            ],
            origin: Origin {
                source: "physics.vrf",
                line: 11,
                premise: Some(
                    "speed_order",
                ),
                kind: "PREMISE",
            },
        },
    ],
    rules: [],
    checks: [
        Check {
            subject: None,
            bidirectional: false,
        },
    ],
    pending_imports: [],
    unused_imports: [],
    consumed: [],
    placeholders: [],
    unwitnessed_exists: [],
    justifications: [],
    hypotheses: [],
    goals: [],
    derivations: [],
    totality: [],
    attributions: [],
}
